--- a/js/package.json
+++ b/js/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "next": "13.3.0",
