--- a/js/package.json
+++ b/js/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
