--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -19,6 +19,8 @@ registry:
     - KAMAL_REGISTRY_PASSWORD
 
 env:
+  clear:
+    DB_HOST: 192.168.0.1
   secret:
     - RAILS_MASTER_KEY
     - POSTGRES_PASSWORD
@@ -26,6 +28,8 @@ env:
 accessories:
   postgres:
     image: postgres:16
+    host: 192.168.0.1
+    port: 5432
     roles:
       - web
     env:
