keep tmp pid folder

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,14 @@ dist
 # T-100 files
 *.csv
 /config/credentials/production.key
+
+# Ignore all logfiles and tempfiles.
+/log/*
+/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
