--- a/app.json
+++ b/app.json
@@ -3,5 +3,16 @@
     "dokku": {
       "predeploy": "bundle exec rails db:migrate"
     }
+  },
+  "healthchecks": {
+    "web": [
+      {
+        "type": "startup",
+        "name": "web check",
+        "description": "Checking if the app responds to the /up endpoint",
+        "path": "/up",
+        "attempts": 3
+      }
+    ]
   }
 }
