--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
-    "next": "13.3.0",
+    "next": "^14.2.5",
     "postcss": "8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5"
   },
   "engines": {
     "node": "^22.0"
