--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
-    "next": "^14.2.5",
     "postcss": "8.4.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "3.3.1"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "3.3.1",
+    "vite": "^5.2.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5"
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6"
   },
   "engines": {
     "node": "^22.0"
